Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/korus-apis-dev/api-exame.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-exame
  namespace: korus-apis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-exame
  template:
    metadata:
      labels:
        app: api-exame
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: api-exame
        image: "registry.pixeon.cloud/korus/api-exame:dev-1.0.0.5"
        pullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: api-exame
---
apiVersion: v1
kind: Service
metadata:
  name: api-exame
  namespace: korus-apis-dev
spec:
  ports:
  - port: 80
  selector:
    app: api-exame
