Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/korus-apis-dev/api-pessoa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-pessoa
  namespace: korus-apis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-pessoa
  template:
    metadata:
      labels:
        app: api-pessoa
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: api-pessoa
        image: "registry.pixeon.cloud/korus/api-pessoa:dev-1.0.0.2"
        pullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: api-pessoa
---
apiVersion: v1
kind: Service
metadata:
  name: api-pessoa
  namespace: korus-apis-dev
spec:
  ports:
  - port: 80
  selector:
    app: api-pessoa
