Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/korus-apis-dev/api-unidades.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-unidades
  namespace: korus-apis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-unidades
  template:
    metadata:
      labels:
        app: api-unidades
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: api-unidades
        image: "registry.pixeon.cloud/korus/api-unidades:dev-1.0.0.7"
        pullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: api-unidades
---
apiVersion: v1
kind: Service
metadata:
  name: api-unidades
  namespace: korus-apis-dev
spec:
  ports:
  - port: 80
  selector:
    app: api-unidades
