Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/korus-apis-dev/korus-apis-dev-ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: korus-apis-dev-ingress-http
  namespace: korus-apis-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: false
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: qas
    nginx.ingress.kubernetes.io/auth-type: basic    
spec:
  rules:
  - host: api-integrador.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-integrador
          servicePort: 80
