Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/korus-apis-dev/korus-apis-dev-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: korus-apis-dev-ingress
  namespace: korus-apis-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: qas
    nginx.ingress.kubernetes.io/auth-type: basic
spec:
  tls:
  - hosts:
    - api-convenios.dev.pixeon.cloud
    - api-exame.dev.pixeon.cloud
    - api-exame-faturamento.dev.pixeon.cloud
    - api-matriz.dev.pixeon.cloud
    - api-medicos.dev.pixeon.cloud
    - api-origem.dev.pixeon.cloud
    - api-pessoa.dev.pixeon.cloud
    - api-planos.dev.pixeon.cloud
    - api-unidades.dev.pixeon.cloud
    secretName: korus-apis-dev-secret
  rules:
  - host: api-convenios.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-convenios
          servicePort: 80
  - host: api-exame.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-exame
          servicePort: 80
  - host: api-exame-faturamento.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-exame-faturamento
          servicePort: 80
  - host: api-matriz.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-matriz
          servicePort: 80
  - host: api-medicos.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-medicos
          servicePort: 80
  - host: api-origem.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-origem
          servicePort: 80
  - host: api-pessoa.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-pessoa
          servicePort: 80
  - host: api-planos.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-planos
          servicePort: 80
  - host: api-unidades.dev.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: api-unidades
          servicePort: 80
